k8s/apps/dashy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy-httproute
  namespace: dashy
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-any
  hostnames:
    - "dashy-gcp.mdch-lab.dev"
  rules:
    - backendRefs:
      - name: dashy
        port: 8080
